# XPlaneConnect

./: .gitignore  Dependencies.ai  README.md  Readme.txt  azure-pipelines.yml  setup.py
C/: CMakeLists.txt  User Guide (C).txt
C/monitorExample/: main.c  monitorExample.sln  monitorExample.vcxproj  monitorExample.vcxproj.filters
C/src/: CMakeLists.txt  xplaneConnect.c  xplaneConnect.h
C/xpcExample/xpcExample/src/: CMakeLists.txt  main.cpp  xpcExample.1
Docs/: Capability Matrix.xlsx  Interface Control Document.xlsx
Java/: .project  pom.xml
Java/Examples/: .project  pom.xml
Java/src/: ViewType.java  WaypointOp.java  XPlaneConnect.java  produce_jar.cmd
Java/xpc/: .project  pom.xml
MATLAB/: Documentation (MATLAB).html
MATLAB/+XPlaneConnect/: clearUDPBuffer.m  closeUDP.m  getCTRL.m  getDREFs.m  getPOSI.m  openUDP.m  pauseSim.m  readDATA.m  readUDP.m  requestDREF.m  selectDATA.m  sendCTRL.m  sendDATA.m  sendDREF.m  sendDREFs.m  sendPOSD.m  sendPOSI.m  sendSTRU.m  sendTEXT.m  sendUDP.m  sendVIEW.m  sendWYPT.m  setConn.m  setDREF.m
MATLAB/Example/: Example.m
MATLAB/MonitorExample/: MonitorExample.m
MATLAB/PlaybackExample/: MyRecording.txt  Playback.m  Record.m
MATLAB/pages/: clearUDPBuffer.html  closeUDP.html  openUDP.html  pauseSim.html  readDATA.html  readUDP.html  requestDREF.html  selectDATA.html  sendCTRL.html  sendDATA.html  sendDREF.html  sendPOSI.html  sendSTRU.html  sendUDP.html  setConn.html
Python/: xplaneConnect.pyproj  xplaneConnect.sln
Python/src/: basicExample.py  playbackExample.py  xpc.py  xplaneConnect.py
Python3/: xplaneConnect.sln
Python3/src/: XPlaneUdpExample.py  basicExample.py  monitorExample.py  playbackExample.py  xpc.py
TestScripts/C Tests/: CMakeLists.txt  C_Tests.1  CtrlTests.h  DataTests.h  DrefTests.h  PosiTests.h  SimuTests.h  Test.c  Test.h  TextTests.h  UDPTests.h  ViewTests.h  WyptTests.h  main.c
TestScripts/C Tests.win/: CTests.sln  CTests.vcxproj  CTests.vcxproj.filters
TestScripts/C Tests.xcodeproj/: project.pbxproj
TestScripts/CPP Tests/: main.cpp
TestScripts/CPP Tests.win/: CPPTests.sln  CPPTests.vcxproj  CPPTests.vcxproj.filters
TestScripts/Cpp Tests.xcodeproj/: project.pbxproj
TestScripts/Java Tests/: XPlaneConnectTest.java  XPlaneDiscoveryTests.java
TestScripts/MATLAB Tests/: CTRLTest.m  DATATest.m  POSITest.m  getCTRLTest.m  getDREFsTest.m  getPOSITest.m  openCloseTest.m  pauseTest.m  requestDREFTest.m  sendCTRLTest.m  sendDREFTest.m  sendPOSITest.m  sendReadTest.m  sendTEXTTest.m  sendVIEWTest.m  sendWYPTTest.m  setConnTest.m  setDREFTest.m  struTest.m  tests.m
TestScripts/Python Tests/: Tests.py  Tests.pyproj
TestScripts/Python3 Tests/: Tests.py
xpcPlugin/: CMakeLists.txt  Camera.cpp  Camera.h  CameraCallbacks.cpp  DataManager.cpp  DataManager.h  DataMaps.cpp  DataMaps.h  Drawing.cpp  Drawing.h  Log.cpp  Log.h  Message.cpp  Message.h  MessageHandlers.cpp  MessageHandlers.h  Timer.cpp  Timer.h  UDPSocket.cpp  UDPSocket.h  XPCLimits.h  XPCPlugin.cpp  support.cpp  xpcDrawing.cpp  xpcDrawing.h  xpcPlugin.xpl  xpcPluginTools.cpp  xpcPluginTools.h
xpcPlugin/Mac/: xpcPlugin.xpl
xpcPlugin/SDK/: README.txt  license.txt
xpcPlugin/SDK/CHeaders/Widgets/: XPStandardWidgets.h  XPUIGraphics.h  XPWidgetDefs.h  XPWidgetUtils.h  XPWidgets.h
xpcPlugin/SDK/CHeaders/Wrappers/: XPCBroadcaster.cpp  XPCBroadcaster.h  XPCDisplay.cpp  XPCDisplay.h  XPCListener.cpp  XPCListener.h  XPCProcessing.cpp  XPCProcessing.h  XPCWidget.cpp  XPCWidget.h  XPCWidgetAttachments.cpp  XPCWidgetAttachments.h
xpcPlugin/SDK/CHeaders/XPLM/: XPLMCamera.h  XPLMDataAccess.h  XPLMDefs.h  XPLMDisplay.h  XPLMGraphics.h  XPLMInstance.h  XPLMMap.h  XPLMMenus.h  XPLMNavigation.h  XPLMPlanes.h  XPLMPlugin.h  XPLMProcessing.h  XPLMScenery.h  XPLMSound.h  XPLMUtilities.h  XPLMWeather.h
xpcPlugin/SDK/Delphi/Widgets/: XPStandardWidgets.pas  XPUIGraphics.pas  XPWidgetDefs.pas  XPWidgetUtils.pas  XPWidgets.pas
xpcPlugin/SDK/Delphi/XPLM/: XPLMCamera.pas  XPLMDataAccess.pas  XPLMDefs.pas  XPLMDisplay.pas  XPLMGraphics.pas  XPLMInstance.pas  XPLMMap.pas  XPLMMenus.pas  XPLMNavigation.pas  XPLMPlanes.pas  XPLMPlugin.pas  XPLMProcessing.pas  XPLMScenery.pas  XPLMSound.pas  XPLMUtilities.pas  XPLMWeather.pas
xpcPlugin/SDK/Libraries/Mac/XPLM.framework/: XPLM
xpcPlugin/SDK/Libraries/Mac/XPWidgets.framework/: XPWidgets
xpcPlugin/SDK/Libraries/Win/: XPLM_64.lib  XPWidgets_64.lib
xpcPlugin/Win/: xpcPlugin.xpl  xpcPlugin32.xpl  xpcPlugin64.xpl
xpcPlugin/XPlaneConnect/: lin.xpl  mac.xpl  win.xpl
xpcPlugin/XPlaneConnect/64/: lin.xpl  win.xpl
xpcPlugin/xpcPlugin/: xpcPlugin.opensdf  xpcPlugin.sln  xpcPlugin.vcxproj  xpcPlugin.vcxproj.filters
xpcPlugin/xpcPlugin.xcodeproj/: project.pbxproj
xpcPlugin/xpcPlugin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xpcPlugin/xpcPlugin.xcodeproj/project.xcworkspace/xcshareddata/: project.xccheckout  xpcPlugin.xccheckout
xpcPlugin/xpcPlugin.xcodeproj/project.xcworkspace/xcuserdata/cteubert.xcuserdatad/: UserInterfaceState.xcuserstate
xpcPlugin/xpcPlugin.xcodeproj/xcuserdata/cteubert.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xpcPlugin/xpcPlugin.xcodeproj/xcuserdata/cteubert.xcuserdatad/xcschemes/: xcschememanagement.plist  xpcPlugin.xcscheme
xpcPlugin/xpcPlugin/xpcPlugin/: xpcPlugin.vcxproj  xpcPlugin.vcxproj.filters
xpcPlugin/xpcPlugin/xpcPlugin/x64/Debug/xpcPlugin.tlog/: CL.read.1.tlog  cl.command.1.tlog  xpcPlugin.lastbuildstate
xplaneconnect/: xpc.py
(+61 files in other folders)
